# point_cloud_viewer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  HACKING.md  README.md  settings.json  vcpkg.json
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/: PointCloud.h  Shader.h  Window.h
source/: PointCloud.cpp  PointCloud.h  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp  structopt.hpp
src/: PointCloud.cpp  Shader.cpp  Window.cpp  main.cpp
test/: bunny100k.normals  bunny100k.xyz
